2005-08-10  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/IMethodReturnType.cs
	  Mono.Cecil.Implem/MethodReturnType.cs
	  Mono.Cecil.Implem/ReflectionReader.cs
	  Mono.Cecil.Implem/ParameterDefinition.cs:
		Make IMethodReturn type inherits IHasMarshalSpec so
		that users can read marshaling info for return types,
		and implement it.

	* CodeGen/templates/ImageWriter.cs
	  Mono.Cecil.Binary/ImageWriter.cs
	  Mono.Cecil.Metadata/MetadataWriter.cs
	  Mono.Cecil.Implem/ReflectionWriter.cs:
		Cecil now emits assemblies understood by the .net clr.

2005-08-09  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/AssemblyKind.cs
	  CodeGen/templates/ImageWriter.cs
	  CodeGen/templates/ImageReader.cs
	  Mono.Cecil.Metadata/MetadataWriter.cs
	  Mono.Cecil.Binary/ImageWriter.cs
	  Mono.Cecil.Binary/ImageInitializer.cs
	  Mono.Cecil.Binary/ImageReader.cs:
		Lots of little fixes. Now dumpbin is coherent
		compared with an assembly emitted with csc or mcs
		but still not yet compatible with .net.

	* Mono.Cecil.Signatures/SignatureReader.cs:
		Fix an array out of range while trying to read
		fixed arrays signatures

	* CodeGen/templates/ImageWriter.cs
	  Mono.Cecil.Metadata/MetadataReader.cs
	  Mono.Cecil.Metadata/MetadataWriter.cs
	  Mono.Cecil.Implem/AssemblyName.cs
	  Mono.Cecil.Implem/StructureReader.cs
	  Mono.Cecil.Implem/ReflectionWriter.cs
	  Mono.Cecil.Binary/ImageCharacteristics.cs
	  Mono.Cecil.Binary/ImageWriter.cs
	  Mono.Cecil.Binary/Image.cs:
		Cecil now emits assemblies that are understood
		by Mono and Cecil itself. Still have troubles
		with Msft CLR.

2005-08-08  Jb Evain  <jbevain@gmail.com>

	* CodeGen/cecil-gen.rb
	  CodeGen/templates/MetadataTableReader.cs
	  CodeGen/templates/ImageWriter.cs
	  CodeGen/templates/MetadataTableWriter.cs
	  CodeGen/templates/BaseMetadataVisitor.cs
	  CodeGen/templates/MetadataRowReader.cs
	  CodeGen/templates/MetadataRowWriter.cs
	  CodeGen/cecil.xml
	  Mono.Cecil.Metadata/MetadataInitializer.cs