@@ -9,15 +9,15 @@
  * See LICENSE.MIT file for more details
  *
  * Generated by /CodeGen/cecil-gen.rb do not edit
- * Mon Aug 08 18:05:32 CEST 2005
+ * Wed Aug 10 15:05:39 CEST 2005
  *
  *****************************************************************************/
 
 namespace Mono.Cecil.Metadata {
 
 	using System;
-	using IO = System.IO;
 	using System.Collections;
+	using IO = System.IO;
 
 	using Mono.Cecil.Binary;
 
@@ -25,6 +25,7 @@ namespace Mono.Cecil.Metadata {
 
 		private MetadataRoot m_root;
 		private IO.BinaryWriter m_binaryWriter;
+		private IDictionary m_ciCache;
 
 		private int m_blobHeapIdxSz;
 		private int m_stringsHeapIdxSz;
@@ -34,6 +35,7 @@ namespace Mono.Cecil.Metadata {
 		{
 			m_binaryWriter = mtwv.GetWriter ();
 			m_root = mtwv.GetMetadataRoot ();
+			m_ciCache = new Hashtable ();
 		}
 
 		private void WriteBlobPointer (uint pointer)
@@ -58,7 +60,8 @@ namespace Mono.Cecil.Metadata {
 
 		private void WriteMetadataToken (MetadataToken token, CodedIndex ci)
 		{
-			WriteByIndexSize (token.RID, Utilities.GetCodedIndexSize (ci, GetNumberOfRows));
+			WriteByIndexSize (token.RID, Utilities.GetCodedIndexSize (ci,
+				new Utilities.TableRowCounter (GetNumberOfRows), m_ciCache));
 		}
 
 		private int GetNumberOfRows (Type table)
