@@ -9,7 +9,7 @@
  * See LICENSE.MIT file for more details
  *
  * Generated by /CodeGen/cecil-gen.rb do not edit
- * Sat Aug 06 03:55:40 CEST 2005
+ * Wed Aug 10 15:01:24 CEST 2005
  *
  *****************************************************************************/
 
@@ -20,8 +20,6 @@ namespace Mono.Cecil.Metadata {
 	using System.IO;
 
 	internal sealed class Utilities {
-
-		private static IDictionary m_codedIndexCache = new Hashtable ();
 
 		private Utilities ()
 		{
@@ -301,11 +299,11 @@ namespace Mono.Cecil.Metadata {
 
 		internal delegate int TableRowCounter (Type table);
 
-		internal static int GetCodedIndexSize (CodedIndex ci, TableRowCounter rowCounter)
+		internal static int GetCodedIndexSize (CodedIndex ci, TableRowCounter rowCounter, IDictionary codedIndexCache)
 		{
 			int bits = 0, max = 0;
-			if (m_codedIndexCache [ci] != null)
-				return (int) m_codedIndexCache [ci];
+			if (codedIndexCache [ci] != null)
+				return (int) codedIndexCache [ci];
 
 			int res = 0;
 			Type [] tables;
@@ -421,7 +419,7 @@ namespace Mono.Cecil.Metadata {
 				if (rows > max) max = rows;
 			}
 			res = max < (1 << (16 - bits)) ? 2 : 4;
-			m_codedIndexCache [ci] = res;
+			codedIndexCache [ci] = res;
 			return res;
 		}
 	}
